--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,15 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+@theme {
+  --color-primary: #1E2640;
+  --color-background: #353C53 ;
+  --color-background-dark: #F2F2F2;
+  --color-background-light: #E6E6E6 ;
+  --color-background-white: #FAFAFA;
+  --color-text: #4D4D4D ;
+  --color-text-dark: #1A181E ;
+  --color-secondary: #146EB4 ;
+  --color-border: #D9D9D9 
+}
