--- a/src/index.css
+++ b/src/index.css
@@ -20,5 +20,6 @@
   --color-text: #4D4D4D ;
   --color-text-dark: #1A181E ;
   --color-secondary: #146EB4 ;
+  --color-seconary-dark: #0E4F82 ;
   --color-border: #D9D9D9 
 }
